[package]
name = "klone"
version = "0.0.0"
edition = "2021"
description = "Reserved"
authors = ["kinire98"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
color-eyre = "0.6.2"
fs_extra = "1.3.0"
glob = "0.3.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
