[package]
name = "klone"
version = "0.3.4"
edition = "2021"
description = "A backup application based in the same FS that will only back the file that you changed"
authors = ["kinire98"]
readme = "README.md"
license-file = "LICENSE.md"
repository = "https://github.com/kinire98/klone"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
color-eyre = "0.6.2"
crossterm = "0.27.0"
fs_extra = "1.3.0"
glob = "0.3.1"
num_cpus = "1.16.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
threads_pool = "0.2.6"
